[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.poetry]
authors = ["Vaibhav Pandey <contact@vaibhavpandey.com>"]
description = ""
name = "app"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
dependency-injector = "^4.41.0"
fastapi = "^0.111.0"
loguru = "^0.7.2"
openai = "^1.35.3"
pymupdf4llm = "^0.0.5"
python-multipart = "^0.0.9"
setuptools = "^70.0.0"

[tool.poetry.dependencies.uvicorn]
extras = ["standard"]
version = "^0.23.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
toml-sort = "^0.23.1"
